// protoc -Ipkg/grpc/ --go_out=plugins=grpc:pkg/grpc schema.proto
syntax = "proto3";
package grpc;

message CreateSchemaRequest {}

message CreateSchemaResponse {}

message ReadSchemaRequest {}

message ReadSchemaResponse {}

message UpdateSchemaRequest {}

message UpdateSchemaResponse {}

message DeleteSchemaRequest {}

message DeleteSchemaResponse {}

service Schema {
    rpc Create (CreateSchemaRequest) returns (CreateSchemaResponse) {}
    rpc Read (ReadSchemaRequest) returns (ReadSchemaResponse) {}
    rpc Update (UpdateSchemaRequest) returns (UpdateSchemaResponse) {}
    rpc Delete (DeleteSchemaRequest) returns (DeleteSchemaResponse) {}
}
