syntax = "proto3";

package grpc;

import public "common.proto";
import "google/protobuf/timestamp.proto";

message LogEntry {
    uint32 id = 1;
    string schema_id = 3;
    string input_id = 4;
    string template_id = 5;
    string identifier = 6;
    int32 code = 7;
    bytes context = 8;
    google.protobuf.Timestamp created_at = 9;
}

message LogFilter {
    string schema_id = 3;
    string input_id = 4;
    string template_id = 5;
    string identifier = 6;
    int32 code = 7;
    TimestampRange created_at = 9;

    uint32 limit = 15;
}

message ReadLogsRequest {
    oneof filter {
        uint32 id = 1;
        LogFilter condition = 2;
    }
}

message ReadLogsResponse {
    repeated LogEntry logs = 1;
}

message ListenLogsRequest {
    LogFilter filter = 1;
}

service Log {
    rpc Read (ReadLogsRequest) returns (ReadLogsResponse) {}
    rpc Listen (ListenLogsRequest) returns (stream LogEntry) {}
}
